css/top_navigation.css
/* top_navigation.css */
:root {
    /* 
        Snagged from Material Design 
        https://material.io/design/color/the-color-system.html
    */
    --blue-gray-50: #ECEFF1;
    --blue-gray-100: #CFD8DC;
    --blue-gray-200: #B0BEC5;
    --blue-gray-300: #90A4AE;
    --blue-gray-400: #78909C;
    --blue-gray-500: #607D8B;
    --blue-gray-600: #546E7A;
    --blue-gray-700: #455A64;
    --blue-gray-800: #37474F;
    --blue-gray-900: #263238;
    
    --transition-timing: 0.25s;
    --transition-timing-function: linear;
}	
body{
	line-height: 1.4;
	background: var(--blue-gray-50);
}
.navbar{
	/*background: var(--blue-gray-900);*/
}
.navbar-menu a{
	display: block;
	padding: 1rem;
	text-decoration: none;
	background: white;
	font-weight: bolder;
	/* font-weight: bolder adds new line fix */
	white-space: nowrap;
	/* end hack */
}
/* Top-level */
.navbar > .navbar-menu >li > a{
	display: inline-block;
	/*color: var(--blue-gray-100);*/
	color: black;
	background: transparent;
	transition:
	background var(--transition-timing) var(--transition-timing-function),
	color var(--transition-timing) var(--transition-timing-function);
}
.navbar > .navbar-menu > li > a:hover,
.navbar > .navbar-menu > li > a:focus{
	/*background: var(--blue-gray-800);*/
	/*color: white;*/
	color: var(--blue-gray-800);
}
.navbar-menu{
	display: flex;
}
.navbar-menu,
.navbar-menu ul{
	margin: 0;
	padding: 0;
	list-style-type: none;
}
.navbar-menu ul{
	position: absolute;
	left: 0;
	top: 100%;
	visibility: hidden;
	opacity: 0;
	width: 14rem;
	box-shadow: 0 0.25rem 1.5rem hsla(200, 19%, 18%, 0.5);
	transition:
	visibility 0s var(--transition-timing-function) var(--transition-timing),
	opacity var(--transition-timing) var(--transition-timing-function);
}
.navbar-menu ul a{
	/*color: var(--blue-gray-600);*/
	transition:
	background var(--transition-timing) var(--transition-timing-function),
	color var(--transition-timing) var(--transition-timing-function);
}
.navbar-menu ul a:hover,
.navbar-menu ul a:focus{
	background: var(--blue-gray-100);
	color: var(--blue-gray-900);
}
.navbar-menu ul > li > ul{
	left: 100%;
	top: 0;
}
.navbar-menu li{
	position: relative;
}
.navbar-menu li.has-children > a{
	position: relative;
}
.navbar-menu li.has-children > a::after{
	position: absolute;
	content: '';
	top: 0;
	right: 0;
	height: 100%;
	width: 1rem;
	background: inherit;
	z-index: 999;
}
.navbar-menu li:hover > ul,
.navbar-menu li:focus-within > ul{
	display: block;
	visibility: visible;
	opacity: 1;
	transition-delay: 0s;
}

